--- a/assets/forms/forms.css
+++ b/assets/forms/forms.css
@@ -1,3 +1,8 @@
+.menu_bottom {
+    margin-bottom: 45px;
+}
+
+
 .form_title {
     text-align: center;
 }
@@ -20,3 +25,4 @@ form {
 .login_center {
     margin: 0px auto;
 }
+
